data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2207.wast
;; 7. **Test Description:** Implement a loop with `br_table` where forward branches have differing operand types and arity from the loop's output requirements. Examine the exit condition of the loop, observing if `wizard_engine`'s error detection precludes infinite processing while WebAssembly traps.

(assert_invalid
  (module
    (func $loop-forward-branch-mismatch
      (loop $loop_label (result i32)
        (block (result i32)
          (i32.const 1) (block (result i64) (i64.const 0) (br_table 1 $loop_label (i32.const 0)))
        )
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)